Add header and hero
Add logo, bg, image, title, buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-   <html lang="en">
+   <html lang="ru">
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,21 +21,51 @@
    <body>
       <!--==================== HEADER ======================-->
       <header class="header" id="header">
-            <nav class="nav container">
-                <a href="#" class="nav__logo">
-                    
-                </a>
-            </nav>
+         <a href="#" class="header__logo">
+            <img src="assets/img/logo.png" alt="logo">
+         </a>
       </header>
 
       <!--==================== MAIN ========================-->
       <main class="main">
-        <!--==================== HOME ====================-->
-         <section class="home section" id="home">
+      
+         <!--==================== HERO ====================-->
+         <section class="hero section" id="hero">
+            <div class="hero__container container grid">
+               <div class="hero__content grid">
+                  <div class="hero__data">
+                     <h1 class="hero__title">
+                        Превратите <br>
+                        уездный город <br>
+                        в столицу <br>
+                        земного шара
+                     </h1>
+                     <p class="hero__description">
+                        Оплатите взнос на телеграммы для организации Международного васюкинского турнира по шахматам
+                     </p>
+                     <div class="hero__buttons">
+                        <a href="#announcement" class="button">Поддержать шахматную мысль</a>
+                        <a href="#price" class="button">Подробнее о турнире</a>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="hero__images">
+                  <!-- <img src="assets/img/bg.png" alt="image" class="hero__img-1"> -->
+                  <img src="assets/img/group1.png" alt="image" class="hero__img-2">
+               </div>
+            </div>
+         </section>
+
+         <!--==================== SCROLLING IMAGE ====================-->
+
+         <!--==================== ANNOUNCEMENT ====================-->
+         <section class="announcement section" id="announcement">
 
          </section>
-         <!--==================== ABOUT ====================-->
-         <section class="about section" id="about">
+
+         <!--==================== PRICE ====================-->
+         <section class="price section" id="price">
 
          </section>
 
@@ -48,6 +78,9 @@
          <section class="participants section" id="participants">
 
          </section>
+
+         <!--==================== SCROLLING IMAGE ====================-->
+
 
       </main>
 
