Edit index, css
Reassign fonts url, reupload bg. Edit hero__title (index.html). Add color variables, assign header font format, remove unnecessary code (css)

--- a/index.html
+++ b/index.html
@@ -34,25 +34,21 @@
             <div class="hero__container container grid">
                <div class="hero__content grid">
                   <div class="hero__data">
-                     <h1 class="hero__title">
-                        Превратите <br>
-                        уездный город <br>
-                        в столицу <br>
-                        земного шара
-                     </h1>
+                     <div class="hero__title">
+                        <h1>
+                           <span class="title-left">Превратите <br> уездный город</span>
+                           <span class="title-center">в столицу <br> земного шара</span>
+                        </h1>
+                     </div>
                      <p class="hero__description">
                         Оплатите взнос на телеграммы для организации Международного васюкинского турнира по шахматам
                      </p>
                      <div class="hero__buttons">
-                        <a href="#announcement" class="button">Поддержать шахматную мысль</a>
-                        <a href="#price" class="button">Подробнее о турнире</a>
+                        <a href="#announcement" class="button"> Поддержать шахматную мысль</a>
+                        <a href="#price" class="button button__price"> Подробнее о турнире
+                          </a>
                      </div>
                   </div>
-               </div>
-
-               <div class="hero__images">
-                  <!-- <img src="assets/img/bg.png" alt="image" class="hero__img-1"> -->
-                  <img src="assets/img/group1.png" alt="image" class="hero__img-2">
                </div>
             </div>
          </section>
