Add announce and price sections, add image
Assign h1,h2,h3.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <title>Клуб четырех коней - Тестовый лендинг</title>
   </head>
   <body>
-    <header>
-    </header>
     <!--==================== MAIN ========================-->
     <main class="main">
       <!--==================== INTRO ====================-->
@@ -29,11 +27,17 @@
             </a>
           </div>
         <div class="intro_container">
-          <div class="title">Превратите уездный город</div>
-          <div class="title" style="text-align: center">
-            в столицу земного шара
+          <div>
+            <h1>
+               Превратите уездный город
+            </h1>
+         </div>
+          <div style="text-align: center">
+            <h1>
+               в столицу земного шара
+            </h1>
           </div>
-          <div class="subtitle">
+          <div class="description">
             Оплатите взнос на телеграммы для организации Международного
             васюкинского турнира по шахматам
           </div>
@@ -82,10 +86,24 @@
       </div>
 
       <!--==================== ANNOUNCEMENT ====================-->
-      <section class="announcement_section" id="announcement"></section>
+      <section class="announcement_section" id="announcement">
+         <div class="announce_text">
+            <h3> Чтобы поддержать Международный васюкинский турнир посетите лекцию на тему: <span style="color:red; font-weight: 700;">«Плодотворная дебютная идея»</span>
+            </h3>
+         </div>
+         <div class="announce_image">
+            <img src="/assets/img/img1.png" alt="">
+         </div>
+      </section>
 
       <!--==================== PRICE ====================-->
-      <section class="price_section" id="price"></section>
+      <section class="price_section" id="price">
+         <div class="price_text">
+            <h3> и Сеанс <span style="color:red; font-weight: 700;">одновременной игры в шахматы на 160 досках </span> гроссмейстера О. Бендера 
+            </h3>
+         </div>
+            
+      </section>
 
       <!--==================== STAGES ====================-->
       <section class="stages_section" id="stages"></section>
