Add image, table
Rename sections

--- a/index.html
+++ b/index.html
@@ -21,31 +21,25 @@
     <main class="main">
       <!--==================== INTRO ====================-->
       <section class="intro">
-         <div class="header" id="header">
-            <a href="#" class="header__logo">
-              <img src="assets/img/logo.png" alt="logo" />
-            </a>
+        <div class="header" id="header">
+          <a href="#" class="header__logo">
+            <img src="assets/img/logo.png" alt="logo" />
+          </a>
+        </div>
+        <div class="intro_data">
+          <div class="intro_title">
+            <h1>Превратите уездный город</h1>
+            <h1 style="text-align: center">в столицу земного шара</h1>
           </div>
-        <div class="intro_container">
-          <div>
-            <h1>
-               Превратите уездный город
-            </h1>
-         </div>
-          <div style="text-align: center">
-            <h1>
-               в столицу земного шара
-            </h1>
-          </div>
-          <div class="description">
+          <div class="intro_description">
             Оплатите взнос на телеграммы для организации Международного
             васюкинского турнира по шахматам
           </div>
-          <div class="buttons_container">
-            <a href="#announcement" class="button_link button_bg">
+          <div class="intro_buttons">
+            <a href="#support" class="button_link button_bg">
               <div class="button_text">Поддержать шахматную мысль</div>
             </a>
-            <a href="#price" class="button_link button_bg_trans">
+            <a href="#about" class="button_link button_bg_tran">
               <div class="button_text">
                 Подробнее <br />
                 о турнире
@@ -85,24 +79,68 @@
         </div>
       </div>
 
-      <!--==================== ANNOUNCEMENT ====================-->
-      <section class="announcement_section" id="announcement">
-         <div class="announce_text">
-            <h3> Чтобы поддержать Международный васюкинский турнир посетите лекцию на тему: <span style="color:red; font-weight: 700;">«Плодотворная дебютная идея»</span>
-            </h3>
-         </div>
-         <div class="announce_image">
-            <img src="/assets/img/img1.png" alt="">
-         </div>
+      <!--==================== SUPPORT ====================-->
+      <section class="support_section" id="support">
+        <div class="support_text">
+          <h3>
+            Чтобы поддержать Международный васюкинский турнир посетите лекцию на
+            тему:
+            <span style="color: red; font-weight: 700"
+              >«Плодотворная дебютная идея»</span
+            >
+          </h3>
+        </div>
+        <div class="support_image">
+          <img src="/assets/img/img1.png" alt="" />
+        </div>
       </section>
 
-      <!--==================== PRICE ====================-->
-      <section class="price_section" id="price">
-         <div class="price_text">
-            <h3> и Сеанс <span style="color:red; font-weight: 700;">одновременной игры в шахматы на 160 досках </span> гроссмейстера О. Бендера 
+      <!--==================== ABOUT ====================-->
+      <section class="about_section" id="about">
+        <div class="about_container">
+          <div class="about_image">
+            <img src="assets/img/img2.png" alt="Сеанс игры в шахматы" />
+          </div>
+          <div class="about_data">
+            <h3 class="about_text">
+              и Сеанс
+              <span style="color: red; font-weight: 700"
+                >одновременной игры в шахматы на 160 досках
+              </span>
+              гроссмейстера О. Бендера
             </h3>
-         </div>
-            
+            <div class="about_table_container">
+              <table class="about_table">
+                <tr>
+                  <td>Место проведения:</td>
+                  <td>Клуб "Картонажник"</td>
+                </tr>
+                <tr>
+                  <td>Дата и время мероприятия:</td>
+                  <td>22 июня 1927 г. в 18:00</td>
+                </tr>
+                <tr>
+                  <td>Стоимость входных билетов:</td>
+                  <td>20 коп.</td>
+                </tr>
+                <tr>
+                  <td>Плата за игру:</td>
+                  <td>50 коп.</td>
+                </tr>
+                <tr>
+                  <td>Взнос на телеграммы:</td>
+                  <td><s class="old_price"></s> 21 руб. 16 коп.</td>
+                </tr>
+              </table>
+            </div>
+            <div class="about_description">
+              <span
+                >По всем вопросам обращаться в администрацию
+                к К. Михельсону</span
+              >
+            </div>
+          </div>
+        </div>
       </section>
 
       <!--==================== STAGES ====================-->
