Adjust image and table (about_section)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <title>Клуб четырех коней - Тестовый лендинг</title>
   </head>
+
   <body>
     <!--==================== MAIN ========================-->
     <main class="main">
@@ -29,7 +30,8 @@
         <div class="intro_data">
           <div class="intro_title">
             <h1>Превратите уездный город</h1>
-            <h1 style="text-align: center">в столицу земного шара</h1>
+            <h1 style="text-align: center"> в столицу</h1>
+            <h1 style="text-align: right"> земного шара</h1>
           </div>
           <div class="intro_description">
             Оплатите взнос на телеграммы для организации Международного
@@ -99,7 +101,7 @@
       <section class="about_section" id="about">
         <div class="about_container">
           <div class="about_image">
-            <img src="assets/img/img2.png" alt="Сеанс игры в шахматы" />
+            <img src="assets/img/img2.png" alt="Chess event" />
           </div>
           <div class="about_data">
             <h3 class="about_text">
@@ -113,7 +115,7 @@
               <table class="about_table">
                 <tr>
                   <td>Место проведения:</td>
-                  <td>Клуб "Картонажник"</td>
+                  <td>Клуб «Картонажник»</td>
                 </tr>
                 <tr>
                   <td>Дата и время мероприятия:</td>
@@ -134,10 +136,8 @@
               </table>
             </div>
             <div class="about_description">
-              <span
-                >По всем вопросам обращаться в администрацию
-                к К. Михельсону</span
-              >
+              <span>По всем вопросам обращаться в администрацию
+                к К. Михельсону</span>
             </div>
           </div>
         </div>
